--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ ignore_errors = True
 ignore_errors = True
 
 [flake8]
-ignore = D10,E203,E501,W503,D205,D400,A001,D210,D401
+ignore = D10,E203,E501,W503,D205,D400,A001,D210,D401,F403,F405
 max-line-length = 88
 select = A,B,C4,D,E,F,M,Q,T,W,ABS,BLK
 exclude = versions/*
