Added some tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [tool:pytest]
-addopts = -s --strict -vv --cache-clear --maxfail=1 --cov=aioauth --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
+addopts = -s --strict -vv --cache-clear --maxfail=1 --cov=aioauth_fastapi --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
 
 [coverage:run]
 branch = True
 omit =
     site-packages
-    aioauth/__version__.py
+    aioauth_fastapi/__version__.py
 
 [mypy]
 python_version = 3.8
