--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,7 @@
 [tool:pytest]
-addopts = -s --strict -vv --cache-clear --maxfail=1 --cov=aioauth_fastapi --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
+addopts = -s --strict-markers --cache-clear --maxfail=1 --cov=aioauth_fastapi --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
+env_files =
+    .env.test
 
 [coverage:run]
 branch = True
