--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,5 @@
 [tool:pytest]
-addopts = -s --strict-markers --cache-clear --maxfail=1 --cov=aioauth_fastapi --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
-env_files =
-    .env.test
+addopts = -s --strict-markers --cache-clear --maxfail=1 --cov=aioauth_fastapi_demo --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
 
 [coverage:run]
 branch = True
