--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,20 @@
+[bumpversion]
+current_version = 0.0.1
+commit = True
+tag = True
+
+[bumpversion:file:aioauth_fastapi/__version__.py]
+search = "{current_version}"
+replace = "{new_version}"
+
 [tool:pytest]
-addopts = -s --strict-markers --cache-clear --maxfail=1 --cov=aioauth_fastapi_demo --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
+addopts = -s --strict -vv --cache-clear --maxfail=1 --cov=aioauth_fastapi --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
 
 [coverage:run]
 branch = True
 omit =
-    site-packages
-    aioauth_fastapi/__version__.py
+	site-packages
+	aioauth_fastapi/__version__.py
 
 [mypy]
 python_version = 3.8
@@ -13,14 +22,11 @@ warn_no_return = False
 disallow_untyped_defs = False
 allow_redefinition = True
 
-[mypy-tests.*]
-ignore_errors = True
-
-[mypy-setup]
-ignore_errors = True
+[bdist_wheel]
+universal = 1
 
 [flake8]
-ignore = D10,E203,E501,W503,D205,D400,A001,D210,D401,F403,F405
+ignore = D10,E203,E501,W503,D205,D400,A001,D210,D401
 max-line-length = 88
 select = A,B,C4,D,E,F,M,Q,T,W,ABS,BLK
 exclude = versions/*
