--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,9 @@ repos:
     rev: v4.0.1
     hooks:
       - id: trailing-whitespace
+        exclude: ^(setup\.cfg)
       - id: end-of-file-fixer
+        exclude: ^(setup\.cfg)
       - id: check-merge-conflict
       - id: detect-private-key
 
@@ -21,6 +23,7 @@ repos:
     rev: v0.910
     hooks:
       - id: mypy
+        exclude: ^(docs/|setup\.py|tests/)
 
   - repo: https://github.com/pycqa/flake8
     rev: 3.9.2
