fix: Fixing CI integration

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,11 +8,11 @@ search = "{current_version}"
 replace = "{new_version}"
 
 [tool:pytest]
-addopts = -s --strict -vv --cache-clear --maxfail=1 --cov=aioauth_fastapi --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
+addopts = -s --strict -vv --cache-clear --maxfail=1 --cov=aioauth_fastapi_demo --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
 
 [coverage:run]
 branch = True
-omit = 
+omit =
 	site-packages
 	aioauth_fastapi/__version__.py
 
